--- a/debian/openerp-server.conf
+++ b/debian/openerp-server.conf
@@ -1,7 +1,7 @@
 [options]
 ; This is the password that allows database operations:
 ; admin_passwd = admin
-db_host = False
+db_host = "/tmp/.s.PGSQL.5432"
 db_port = False
 db_user = odoo
 db_password = False
